--- a/Deckel-Shop/Views/Cart/Checkout.cshtml
+++ b/Deckel-Shop/Views/Cart/Checkout.cshtml
@@ -51,68 +51,48 @@
     </div>
     <div class="col-md-7 col-lg-8">
         <h4 class="mb-3">Billing address</h4>
-        <form class="needs-validation" novalidate>
+        <form asp-action="AddOrder" class="form-horizontal">
             <div class="row g-3">
                 <div class="col-sm-6">
-                    @Html.LabelFor(model => model.FirstName, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <input type="text" class="form-control" id="firstName" placeholder="" value="" required>
-                    <div class="invalid-feedback">
-                        Valid first name is required.
-                    </div>
+                    <label class="control-label">First Name</label>
+                    <input asp-for="FirstName" class="form-control" />
+                    <span asp-validation-for="FirstName" class="text-danger"></span>
                 </div>
 
                 <div class="col-sm-6">
-                    @Html.LabelFor(model => model.LastName, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <input type="text" class="form-control" id="lastName" placeholder="" value="" required>
-                    <div class="invalid-feedback">
-                        Valid last name is required.
-                    </div>
+                    <label class="control-label">Last Name</label>
+                    <input asp-for="LastName" class="form-control" />
+                    <span asp-validation-for="LastName" class="text-danger"></span>
                 </div>
 
                 <div class="col-12">
-                    @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2 ml-auto" })
-                    <input type="email" class="form-control" id="email" placeholder="you@example.com">
-                    <div class="invalid-feedback">
-                        Please enter a valid email address for shipping updates.
-                    </div>
+                    <label class="control-label">Email</label>
+                    <input asp-for="Email" class="form-control" />
+                    <span asp-validation-for="Email" class="text-danger"></span>
                 </div>
 
                 <div class="col-12">
-                    @Html.LabelFor(model => model.Street, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <input type="text" class="form-control" id="address" placeholder="1234 Main St" required>
-                    <div class="invalid-feedback">
-                        Please enter your shipping address.
-                    </div>
+                    <label class="control-label">Street</label>
+                    <input asp-for="Street" class="form-control" />
+                    <span asp-validation-for="Street" class="text-danger"></span>
                 </div>
 
                 <div class="col-md-5">
-                    @Html.LabelFor(model => model.Country, htmlAttributes: new { @class = "control-label col-md-2 ml-auto" })
-                    <select class="form-select" id="country" required>
-                        <option value="">Choose...</option>
-                        <option>Sweden</option>
-                    </select>
-                    <div class="invalid-feedback">
-                        Please select a valid country.
-                    </div>
+                    <label class="control-label">Country</label>
+                    <input asp-for="Country" class="form-control" />
+                    <span asp-validation-for="Country" class="text-danger"></span>
                 </div>
 
                 <div class="col-md-4">
-                    @Html.LabelFor(model => model.City, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <select class="form-select" id="city" required>
-                        <option value="">Choose...</option>
-                        <option>Malmö</option>
-                    </select>
-                    <div class="invalid-feedback">
-                        Please provide a valid state.
-                    </div>
+                    <label class="control-label">City</label>
+                    <input asp-for="City" class="form-control" />
+                    <span asp-validation-for="City" class="text-danger"></span>
                 </div>
 
                 <div class="col-md-3">
-                    @Html.LabelFor(model => model.ZipCode, htmlAttributes: new { @class = "control-label col-md-2 mr-auto" })
-                    <input type="text" class="form-control" id="zip" placeholder="" required>
-                    <div class="invalid-feedback">
-                        Zip code required.
-                    </div>
+                    <label class="control-label">Zip Code</label>
+                    <input asp-for="ZipCode" class="form-control" />
+                    <span asp-validation-for="ZipCode" class="text-danger"></span>
                 </div>
             </div>
 
@@ -184,13 +164,18 @@
 
             <hr class="my-4">
 
-            <button class="w-100 btn btn-primary btn-lg" type="submit">Checkout</button>
+            <button class="w-100 btn btn-primary btn-lg" type="submit" value="Submit">Checkout</button>
             <div class="form-group">
-                <div class="col-md-offset-2 col-md-10" style="color:green">
-                    @ViewBag.Message
-
-                </div>
+                
             </div>
         </form>
+        @{
+            if (TempData["Msg"] != null)
+            {
+                <script>
+                    alert('@TempData["msg"]')
+                </script>
+            }
+        }
     </div>
 </div>
