Added admin and customer roles. Added functionality to toggle a users role.

--- a/Deckel-Shop/Views/Profile/Administrator/Admin_customerList.cshtml
+++ b/Deckel-Shop/Views/Profile/Administrator/Admin_customerList.cshtml
@@ -15,6 +15,9 @@
         <a class="nav-link active" asp-action="Admin_customerList">Customer List</a>
     </li>
     <li class="nav-item">
+        <a class="nav-link" asp-action="Users">User List</a>
+    </li>
+    <li class="nav-item">
         <a class="nav-link" asp-action="Stock">Stock</a>
     </li>
 </ul>
