--- a/Deckel-Shop/Views/Profile/Administrator/Index.cshtml
+++ b/Deckel-Shop/Views/Profile/Administrator/Index.cshtml
@@ -18,6 +18,9 @@
         <a class="nav-link" asp-action="Admin_customerList">Customer List</a>
     </li>
     <li class="nav-item">
+        <a class="nav-link" asp-action="Users">User List</a>
+    </li>
+    <li class="nav-item">
         <a class="nav-link" asp-action="Stock">Stock</a>
     </li>
 </ul>
@@ -202,7 +205,7 @@
             </div>
             <div class="modal-footer">
                 <form method="post">
-                    <button class="btn btn-danger" id="DeleteBtn" name="deleteId" value="">Yes</button>
+                    <button class="btn btn-danger" id="addToAdminBtn" name="deleteId" value="">Yes</button>
                 </form>
                 <button type="button" class="btn btn-primary" data-dismiss="modal">Cancel</button>
             </div>
