--- a/Deckel-Shop/wwwroot/css/site.css
+++ b/Deckel-Shop/wwwroot/css/site.css
@@ -7,6 +7,7 @@ for details on configuring this project to bundle and minify static web assets. 
     color: #e9cf97 !important;
     background-color: #4e4e4e !important;
     text-decoration: underline;
+    div {border-color: #c4a970;}
 }
 
 .DeckelModal {
@@ -31,6 +32,10 @@ for details on configuring this project to bundle and minify static web assets. 
 
 
 /***New css**/
+
+.h3{
+    margin-bottom: 40px;
+}
 
 .RemoveUnderline::before{
     border-bottom: 0px;
