--- a/Deckel-Shop/Views/Home/Contact.cshtml
+++ b/Deckel-Shop/Views/Home/Contact.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿<div class="container-fluid">
 <h3>Contact Us</h3>
 <form action="https://formsubmit.co/deckelshop@gmail.com" method="POST">
     <label for="name">Name</label>
@@ -14,3 +14,4 @@
     <br />
     <input type="submit" class="btn btn-primary" value="Submit">
 </form>
+</div>
