--- a/Deckel-Shop/wwwroot/css/site.css
+++ b/Deckel-Shop/wwwroot/css/site.css
@@ -33,6 +33,8 @@ for details on configuring this project to bundle and minify static web assets. 
 
 .h3{
     margin-bottom: 40px;
+    padding-left:15px;
+    padding-right: 20px;
 }
 
 .RemoveUnderline::before{
