Changed color on status button (all locations)

--- a/Deckel-Shop/Views/Profile/Administrator/Stock.cshtml
+++ b/Deckel-Shop/Views/Profile/Administrator/Stock.cshtml
@@ -35,7 +35,7 @@
         <div class="col-sm-2">
             <div class="d-flex">
                 <div class="dropdown mr-1">
-                    <button type="button" class="btn btn-secondary dropdown-toggle" id="dropdownMenuOffset" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-offset="10,20">
+                    <button type="button" class="btn btn-primary dropdown-toggle" id="dropdownMenuOffset" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-offset="10,20">
                         Status
                     </button>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuOffset">
