--- a/Deckel-Shop/wwwroot/css/site.css
+++ b/Deckel-Shop/wwwroot/css/site.css
@@ -6,7 +6,16 @@ for details on configuring this project to bundle and minify static web assets. 
 .btn-primary {
     color: #e9cf97 !important;
     background-color: #4e4e4e !important;
+    border-color: #6a737b !important;
 }
+
+.btn-primary:not(:disabled):not(.disabled).active:focus, .btn-primary:not(:disabled):not(.disabled):active:focus, .show > .btn-primary.dropdown-toggle:focus {
+    box-shadow: 0 0 0 .2rem #e9cf97 !important;
+}
+
+    .btn-primary.focus, .btn-primary:focus {
+        box-shadow: 0 0 0 0.2rem rgb(153 225 228) !important;
+    }
 
 .DeckelModal {
     background-color: #f2f2f2;
@@ -27,13 +36,10 @@ for details on configuring this project to bundle and minify static web assets. 
         ul.catBlock li a {
             display: block;
         }*/
-
-
 /***New css**/
-
-.h3{
+.h3 {
     margin-bottom: 40px;
-    padding-left:15px;
+    padding-left: 15px;
     padding-right: 20px;
 }
 
