--- a/Deckel-Shop/Views/Profile/Administrator/Index.cshtml
+++ b/Deckel-Shop/Views/Profile/Administrator/Index.cshtml
@@ -44,7 +44,7 @@
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuOffset">
                     <a class="dropdown-item" value="1" href="#">Invoiced</a>
                     <a class="dropdown-item" value="2" href="#">Delivered</a>
-                    <a class="droptabldown-item" value="3" href="#">Cancelled</a>
+                    <a class="dropdown-item" value="3" href="#">Cancelled</a>
                 </div>
             </div>
         </div>
