--- a/Deckel-Shop/wwwroot/css/site.css
+++ b/Deckel-Shop/wwwroot/css/site.css
@@ -5,7 +5,7 @@ for details on configuring this project to bundle and minify static web assets. 
 
 .btn-primary {
     color: #e9cf97 !important;
-    background-color: #4e4e4e !important;
+    background-color: #2f2f2f !important;
     border-color: #6a737b !important;
 }
 
@@ -63,7 +63,7 @@ nav {
     justify-content: space-around;
     align-items: center;
     min-height: 8vh;
-    background-color: #4e4e4e;
+    background-color: #2f2f2f;
     font-family: 'Open Sans', sans-serif;
     margin-bottom: 30px;
     box-shadow: -22px 22px 20px #aaaaaa, 22px -22px 20px #ffffff;
@@ -121,7 +121,7 @@ nav {
 
 nav a:before {
     content: "";
-    border-bottom: 2px solid rgb(187 174 147);
+    border-bottom: 2px solid #c4a970;
     position: absolute;
     bottom: 0px;
     left: 0px;
@@ -140,6 +140,8 @@ nav a:hover:before {
 nav .nav-link {
 }
 
+.row{
+}
 
 .burger {
     display: none;
@@ -183,11 +185,16 @@ nav .nav-link {
 }
 
 footer {
-   background-color: #c6c6c6;
+    background-color: #2f2f2f;
+    color:white;
 }
 
 footer a{
  color: #ffffff;
+}
+
+footer a:hover{
+    color:#e2c78e
 }
 
 @media screen and (max-width: 1024px) {
@@ -206,7 +213,7 @@ footer a{
         right: 0px;
         height: 92vh;
         top: 10vh;
-        background-color: #4e4e4e;
+        background-color: #2f2f2f;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -214,8 +221,7 @@ footer a{
         transform: translateX(100%);
         transition: transform 0.2s ease-in;
         opacity: 95%;
-
-        z-index:auto;
+        z-index: auto;
     }
 
     .text-dark {
