Removed underline from login

--- a/Deckel-Shop/Views/Shared/_Layout.cshtml
+++ b/Deckel-Shop/Views/Shared/_Layout.cshtml
@@ -46,7 +46,7 @@
             <div style="float:right">
                 <ul class="nav-items">
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
+                        <a class="nav-link dropdown-toggle RemoveUnderline" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
                            aria-haspopup="true" aria-expanded="false">
                             <i class="far fa-user fa-3x"></i>
                             <span class="clearfix d-none d-sm-inline-block"></span>
