--- a/Deckel-Shop/Views/Cart/Checkout.cshtml
+++ b/Deckel-Shop/Views/Cart/Checkout.cshtml
@@ -77,11 +77,11 @@
                     <span asp-validation-for="Street" class="text-danger"></span>
                 </div>
 
-                <div class="col-md-5">
+                @*<div class="col-md-5">
                     <label class="control-label">Country</label>
                     <input asp-for="Country" class="form-control" />
                     <span asp-validation-for="Country" class="text-danger"></span>
-                </div>
+                </div>*@
 
                 <div class="col-md-4">
                     <label class="control-label">City</label>
