--- a/Deckel-Shop/Views/Profile/Administrator/DeliveredOrders.cshtml
+++ b/Deckel-Shop/Views/Profile/Administrator/DeliveredOrders.cshtml
@@ -119,74 +119,7 @@
     </div>
 </div>
 
-@*order detail modal *@
-<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" style="max-width: 1000px" role="document">
-        <div class="DeckelModal modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLongTitle">Order #placeholder-OrderID</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <div class="container-fluid">
-                    <div class="row">
-                        @*Left side*@
-                        <div class="col-md-6">
-                            <h3 class="d-flex justify-content-between align-items-center mb-3">
-                                Purchased products
-                                <span class="badge bg-light rounded-pill">3</span>
-                            </h3>
-                            <hr />
-
-                            <ul class="list-group mb-3" id="OrderedItemsList">
-                            </ul>
-
-                        </div>
-                        @*Right Side*@
-                        <div class="col-md-6">
-                            <h3>
-                                Order Details
-                            </h3>
-                            <hr />
-
-                            <div class="card" style="width: 100%;">
-                                <div class="card-body">
-                                    <h5 class="card-title" id="personName">Twitter, Inc</h5>
-                                    <p class="card-text" id="personAddress">795 Folsom Ave, Suite 600 San Francisco, CA 94107</p>
-                                    <span id="personPhone">Phone:</span>
-                                    <br />
-                                    <br />
-                                    <a href="#" class="btn btn-primary">Change</a>
-                                </div>
-                            </div>
-                            <br />
-                            <ul class="list-group">
-                                <li class="list-group-item d-flex justify-content-between lh-sm">
-                                    <h6 class="my-0">Shipping cost:</h6>
-                                    <span class="text-muted">50 kr</span>
-                                </li>
-                                <li class="list-group-item d-flex justify-content-between lh-sm">
-                                    <h6 class="my-0">Order cost:</h6>
-                                    <span id="orderCost" class="text-muted">1550 kr</span>
-                                </li>
-                                <li class="list-group-item d-flex justify-content-between bg-light"></li>
-                                <li class="list-group-item d-flex justify-content-between">
-                                    <span>Total (SEK)</span>
-                                    <strong id="total">1629 kr</strong>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
-            </div>
-        </div>
-    </div>
-</div>
+<partial name="~/Views/Shared/_OrderDetailModal.cshtml" />
 
 @*delete order modal*@
 <!-- Modal -->
