--- a/Deckel-Shop/Views/Cart/Checkout.cshtml
+++ b/Deckel-Shop/Views/Cart/Checkout.cshtml
@@ -8,7 +8,7 @@
         user-select: none;
     }
 </style>
-@model Database.Models.Customer
+@model Deckel_Shop.Models.CheckoutViewModel
  
 @using (Html.BeginForm())
 
@@ -17,34 +17,32 @@
     <div class="col-md-5 col-lg-4 order-md-last">
         <h4 class="d-flex justify-content-between align-items-center mb-3">
             <span class="text-primary">Your cart</span>
-            <span class="badge bg-primary rounded-pill">3</span>
         </h4>
         <ul class="list-group mb-3">
-            <li class="list-group-item d-flex justify-content-between lh-sm">
-                <div>
-                    <h6 class="my-0">Product name</h6>
-                    <small class="text-muted">Brief description</small>
-                </div>
-                <span class="text-muted">$12</span>
-            </li>
-            <li class="list-group-item d-flex justify-content-between lh-sm">
-                <div>
-                    <h6 class="my-0">Second product</h6>
-                    <small class="text-muted">Brief description</small>
-                </div>
-                <span class="text-muted">$8</span>
-            </li>
-            <li class="list-group-item d-flex justify-content-between lh-sm">
-                <div>
-                    <h6 class="my-0">Third item</h6>
-                    <small class="text-muted">Brief description</small>
-                </div>
-                <span class="text-muted">$5</span>
-            </li>
+
+            @if (Model != null)
+            {
+                foreach (var item in Model.Products)
+                {
+                    <li class="list-group-item d-flex justify-content-between lh-sm">
+                        <div>
+                            <h6 class="my-0">@item.Name</h6>
+                            <small class="text-muted">@item.Amount</small>
+                        </div>
+                        <span class="text-muted">@item.Price SEK</span>
+                    </li>
+                    }
+                }
+                else
+                {
+
+                }
+
+
             <li class="list-group-item d-flex justify-content-between bg-light"></li>
             <li class="list-group-item d-flex justify-content-between">
-                <span>Total (USD)</span>
-                <strong>$20</strong>
+                <span>Total (SEK)</span>
+                <strong>@Model.TotalPrice SEK</strong>
             </li>
         </ul>
 
@@ -55,44 +53,44 @@
             <div class="row g-3">
                 <div class="col-sm-6">
                     <label class="control-label">First Name</label>
-                    <input asp-for="FirstName" class="form-control" />
-                    <span asp-validation-for="FirstName" class="text-danger"></span>
+                    <input asp-for="@Model.Customer.FirstName" class="form-control" />
+                    <span asp-validation-for="@Model.Customer.FirstName" class="text-danger"></span>
                 </div>
 
                 <div class="col-sm-6">
                     <label class="control-label">Last Name</label>
-                    <input asp-for="LastName" class="form-control" />
-                    <span asp-validation-for="LastName" class="text-danger"></span>
+                    <input asp-for="@Model.Customer.LastName" class="form-control" />
+                    <span asp-validation-for="@Model.Customer.LastName" class="text-danger"></span>
                 </div>
 
                 <div class="col-12">
                     <label class="control-label">Email</label>
-                    <input asp-for="Email" class="form-control" />
-                    <span asp-validation-for="Email" class="text-danger"></span>
+                    <input asp-for="@Model.Customer.Email" class="form-control" />
+                    <span asp-validation-for="@Model.Customer.Email" class="text-danger"></span>
                 </div>
 
                 <div class="col-12">
                     <label class="control-label">Street</label>
-                    <input asp-for="Street" class="form-control" />
-                    <span asp-validation-for="Street" class="text-danger"></span>
+                    <input asp-for="@Model.Customer.Street" class="form-control" />
+                    <span asp-validation-for="@Model.Customer.Street" class="text-danger"></span>
                 </div>
 
-                @*<div class="col-md-5">
-                    <label class="control-label">Country</label>
-                    <input asp-for="Country" class="form-control" />
-                    <span asp-validation-for="Country" class="text-danger"></span>
-                </div>*@
+                <div class="col-md-5">
+                    <label class="control-label">Phone number</label>
+                    <input asp-for="@Model.Customer.Phone" class="form-control" />
+                    <span asp-validation-for="@Model.Customer.Phone" class="text-danger"></span>
+                </div>
 
                 <div class="col-md-4">
                     <label class="control-label">City</label>
-                    <input asp-for="City" class="form-control" />
-                    <span asp-validation-for="City" class="text-danger"></span>
+                    <input asp-for="@Model.Customer.City" class="form-control" />
+                    <span asp-validation-for="@Model.Customer.City" class="text-danger"></span>
                 </div>
 
                 <div class="col-md-3">
                     <label class="control-label">Zip Code</label>
-                    <input asp-for="ZipCode" class="form-control" />
-                    <span asp-validation-for="ZipCode" class="text-danger"></span>
+                    <input asp-for="@Model.Customer.ZipCode" class="form-control" />
+                    <span asp-validation-for="@Model.Customer.ZipCode" class="text-danger"></span>
                 </div>
             </div>
 
@@ -163,8 +161,14 @@
             </div>
 
             <hr class="my-4">
-
-            <button class="w-100 btn btn-primary btn-lg" type="submit" value="Submit">Checkout</button>
+            @if (Model.Products.Count == 0)
+            {
+                <button class="w-100 btn btn-primary btn-lg" type="submit" value="Submit" disabled>Checkout</button>
+            }
+            else
+            {
+                <button class="w-100 btn btn-primary btn-lg" type="submit" value="Submit">Checkout</button>
+            }
             <div class="form-group">
                 
             </div>
