--- a/Deckel-Shop/Views/Cart/SavedCart.cshtml
+++ b/Deckel-Shop/Views/Cart/SavedCart.cshtml
@@ -8,6 +8,7 @@
     var cart = SessionHelper.Get<Cart>(Context.Session, "cart");
 }
 
+@{ var totalPrice = 0.0M; }
 <section class="shopping-cart dark">
     <div class="block-heading">
         <h2>Shopping Cart</h2>
@@ -27,7 +28,6 @@
                 </tr>
             </thead>
             <tbody>
-                @{ var totalPrice = 0.0M; }
                 @foreach (var product in Model.Products)
                 {
                     var productTotal = product.Price * product.Amount;
@@ -83,9 +83,17 @@
 
     <hr />
 
-
     <div class="col-md-6 col-lg-4 m-auto">
-        <a asp-controller="cart" asp-action="checkout" class="btn btn-primary btn-lg btn-block">Checkout</a>
+        <form asp-controller="cart" asp-action="checkout">
+            @if (Model == null)
+            {
+                <button value="@totalPrice" name="totalPrice"class="btn btn-primary btn-lg btn-block" disabled>Checkout</button>
+            }
+            else
+            {
+                <button value="@totalPrice" name="totalPrice"class="btn btn-primary btn-lg btn-block">Checkout</button>
+            }
+        </form>
     </div>
 
 
