--- a/Deckel-Shop/Views/Profile/Customer/OrderHistory.cshtml
+++ b/Deckel-Shop/Views/Profile/Customer/OrderHistory.cshtml
@@ -8,10 +8,12 @@
 @*<h3>Name of customer</h3>*@
 
 
+@model IEnumerable<Database.Models.Order>
+
 <ul class="nav nav-tabs">
     @*<li class="nav-item">
-        <a class="nav-link" asp-action="Index">Profile</a>
-    </li>*@
+            <a class="nav-link" asp-action="Index">Profile</a>
+        </li>*@
     <li class="nav-item">
         <a class="nav-link active" asp-action="CustomerOrderHistory">Order History</a>
     </li>
@@ -19,18 +21,20 @@
         <a class="nav-link" href="~/Identity/Account/Manage/">Manage account</a>
     </li>
     @*<li class="nav-item">
-        <a class="nav-link disabled" href="#">Disabled</a>
-    </li>*@
+            <a class="nav-link disabled" href="#">Disabled</a>
+        </li>*@
 </ul>
 
 
-
-<div class="row">
-    <table class="table" id="tblOrderHistory">
+<div class="row mt-3 pt-3 mb-3">
+    <table class="table table-striped table-bordered dt-responsive display nowrap">
         <thead>
             <tr>
                 <th>
                     ORDER#
+                </th>
+                <th>
+                    ORDER DATE
                 </th>
                 <th>
                     ORDER STATUS
@@ -39,135 +43,42 @@
                     SHIPPING DATE
                 </th>
                 <th>
-                    ORDERED BY
-                </th>
-                <th>
                     ORDER TOTAL
                 </th>
                 <th></th>
             </tr>
         </thead>
-        <tbody id="customerOrderHistoryTable">
-            <tr>
-                <td>
-                    S123456789
-                </td>
-                <td>
-                    Invoiced
-                </td>
-                <td>
-                    2021-01-01
-                </td>
-                <td>
-                    Customer#01
-                </td>
-                <td>
-                    $213.23
-                </td>
-                <td>
-                    <a data-toggle="modal" data-target="#exampleModalCenter" asp-action="Details"><i class="fas fa-list-ul"></i> Details</a>
-                </td>
-            </tr>
+        <tbody class="tableSearch">
+            @foreach (var order in Model)
+            {
+
+                <tr>
+                    <td>
+                        @order.OrderId
+                    </td>
+                    <td>
+                        @order.OrderDate
+                    </td>
+                    <td>
+                        @order.OrderStatus
+                    </td>
+                    <td>
+                        @order.ShippingDate
+                    </td>
+                    <td>
+                        @order.OrderTotal SEK
+                    </td>
+                    <td>
+                        <span data-toggle="tooltip" data-placement="bottom" title="info">
+                            <button type="button" onclick="GetModalInfo(@order.OrderId, 'orderDetails')" id="infoModalBtn-@order.OrderId" class="btn btn-light" data-toggle="modal" data-target="#exampleModalCenter" style="background-color:transparent">
+                                <i class="fas fa-info-circle"></i>
+                            </button>
+                        </span>
+                    </td>
+                </tr>
+            }
         </tbody>
     </table>
 </div>
 
-<!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
-    Launch demo modal
-</button>
-
-<!-- Modal -->
-<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered " style="max-width: 1000px" role="document">
-        <div class="DeckelModal modal-content ">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLongTitle">Order #placeholder-OrderID</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <div class="container-fluid">
-                    <div class="row">
-                        @*Left side*@
-                        <div class="col-md-6">
-                            <h3 class="d-flex justify-content-between align-items-center mb-3">
-                                Purchased products
-                                <span class="badge bg-primary rounded-pill">3</span>
-                            </h3>
-                            <hr />
-
-                            <ul class="list-group mb-3">
-                                <li class="list-group-item d-flex justify-content-between lh-sm">
-                                    <div>
-                                        <h6 class="my-0">Product name</h6>
-                                        <small class="text-muted">Brief description</small>
-                                    </div>
-                                    <span class="text-muted">$12</span>
-                                </li>
-                                <li class="list-group-item d-flex justify-content-between lh-sm">
-                                    <div>
-                                        <h6 class="my-0">Second product</h6>
-                                        <small class="text-muted">Brief description</small>
-                                    </div>
-                                    <span class="text-muted">$8</span>
-                                </li>
-                                <li class="list-group-item d-flex justify-content-between lh-sm">
-                                    <div>
-                                        <h6 class="my-0">Third item</h6>
-                                        <small class="text-muted">Brief description</small>
-                                    </div>
-                                    <span class="text-muted">$5</span>
-                                </li>
-                            </ul>
-
-                        </div>
-                        @*Right Side*@
-                        <div class="col-md-6">
-                            <h3>
-                                Order Details
-                            </h3>
-                            <hr />
-
-                            <div class="card" style="width: 100%;">
-                                <div class="card-body">
-                                    <h5 class="card-title">Twitter, Inc</h5>
-                                    <p class="card-text">795 Folsom Ave, Suite 600 San Francisco, CA 94107</p>
-                                    <abbr title="Phone">Phone:</abbr> (123) 456-7890
-                                    <br />
-                                    <br />
-                                    <a href="#" class="btn btn-primary">Change</a>
-                                </div>
-                            </div>
-                            <br />
-                            <ul class="list-group">
-                                <li class="list-group-item d-flex justify-content-between lh-sm">
-                                    <h6 class="my-0">Shipping cost:</h6>
-                                    <span class="text-muted">50 kr</span>
-                                </li>
-                                <li class="list-group-item d-flex justify-content-between lh-sm">
-                                    <h6 class="my-0">Extra cost:</h6>
-                                    <span class="text-muted">29 kr</span>
-                                </li>
-                                <li class="list-group-item d-flex justify-content-between lh-sm">
-                                    <h6 class="my-0">Order cost:</h6>
-                                    <span class="text-muted">1550 kr</span>
-                                </li>
-                                <li class="list-group-item d-flex justify-content-between bg-light"></li>
-                                <li class="list-group-item d-flex justify-content-between">
-                                    <span>Total (SEK)</span>
-                                    <strong>1629 kr</strong>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
-            </div>
-        </div>
-    </div>
-</div>
+<partial name="~/Views/Shared/_OrderDetailModal.cshtml" />
