--- a/Deckel-Shop/wwwroot/css/site.css
+++ b/Deckel-Shop/wwwroot/css/site.css
@@ -17,11 +17,11 @@ for details on configuring this project to bundle and minify static web assets. 
         box-shadow: 0 0 0 0.2rem rgb(153 225 228) !important;
     }
 
-/*.DeckelModal {
+.DeckelModal {
     background-color: #f2f2f2;
     box-shadow: 0 3.4px 2.7px rgba(0, 0, 0, 0.044), 0 8.7px 6.9px rgba(0, 0, 0, 0.068), 0 17.7px 14.2px rgba(0, 0, 0, 0.087), 0 36.5px 29.2px rgba(0, 0, 0, 0.106), 0 100px 80px rgba(0, 0, 0, 0.15);
 }
-*/
+
 /*ul.catBlock {
     display: table;
 }
@@ -302,6 +302,10 @@ footer a:hover{
     color: white;
     position: relative;
     z-index: 1;
+}
+
+.container main{
+    min-height: 800px;
 }
 
 .container-p {
